changing protofile and DB handler for allowing to retrieve all data from DB
