# handlers/main.go
@@ -69,13 +69,39 @@ func (s *Server) GetStationWorkloadFromDB(ctx context.Context, req *protobuff.Ge
 	msg_err := "OK"
 	conn, err := redis.Dial("tcp", "localhost:6379")
 	if err != nil {
-		result := &protobuff.GetStationWorkloadFromDBResponse{RespstationName: req.GetStationName(), RespWorkLoad: map[string]*protobuff.DayWork{}, Error: err.Error()}
+		result := &protobuff.GetStationWorkloadFromDBResponse{StationWorkloads: []*protobuff.StationData{&protobuff.StationData{RespstationName: req.GetStationName(), RespWorkLoad: map[string]*protobuff.DayWork{}, Error: "Cannot connect to Redis"}}}
 		return result, nil
 	}
 	defer conn.Close()
+	if req.GetStationName() == "All" {
+		keys, err := redis.Strings(conn.Do("KEYS", "*"))
+		if err != nil || len(keys) == 0 {
+			result := &protobuff.GetStationWorkloadFromDBResponse{StationWorkloads: []*protobuff.StationData{&protobuff.StationData{RespstationName: req.GetStationName(), RespWorkLoad: map[string]*protobuff.DayWork{}, Error: "No data found in Redis"}}}
+			return result, nil
+		}
+		tmpresp := []*protobuff.StationData{}
+		for _, v := range keys {
+			var tmp map[string]*protobuff.DayWork
+			values, err := redis.String(conn.Do("HGET", v, "WorkLoad"))
+			if err != nil {
+				result := &protobuff.GetStationWorkloadFromDBResponse{StationWorkloads: []*protobuff.StationData{&protobuff.StationData{RespstationName: v, RespWorkLoad: map[string]*protobuff.DayWork{}, Error: err.Error()}}}
+				return result, nil
+			}
+			//fmt.Println(values)
+			//Unmarshaling to response struct
+			err = json.Unmarshal([]byte(values), &tmp)
+			if err != nil {
+				result := &protobuff.GetStationWorkloadFromDBResponse{StationWorkloads: []*protobuff.StationData{&protobuff.StationData{RespstationName: v, RespWorkLoad: map[string]*protobuff.DayWork{}, Error: fmt.Sprintf("Failed to retrieve workload for station %s", v)}}}
+				return result, nil
+			}
+			tmpresp = append(tmpresp, &protobuff.StationData{RespstationName: v, RespWorkLoad: tmp, Error: "OK\n"})
+		}
+		result := &protobuff.GetStationWorkloadFromDBResponse{StationWorkloads: tmpresp}
+		return result, nil
+	}
 	values, err := redis.String(conn.Do("HGET", req.GetStationName(), "WorkLoad"))
 	if err != nil {
-		result := &protobuff.GetStationWorkloadFromDBResponse{RespstationName: req.GetStationName(), RespWorkLoad: map[string]*protobuff.DayWork{}, Error: err.Error()}
+		result := &protobuff.GetStationWorkloadFromDBResponse{StationWorkloads: []*protobuff.StationData{&protobuff.StationData{RespstationName: req.GetStationName(), RespWorkLoad: map[string]*protobuff.DayWork{}, Error: fmt.Sprintf("Failed to retrieve workload for station %s", req.GetStationName())}}}
 		return result, nil
 	}
 	var tmp map[string]*protobuff.DayWork
@@ -83,13 +109,12 @@ func (s *Server) GetStationWorkloadFromDB(ctx context.Context, req *protobuff.Ge
 	//Unmarshaling to response struct
 	err = json.Unmarshal([]byte(values), &tmp)
 	if err != nil {
-		result := &protobuff.GetStationWorkloadFromDBResponse{RespstationName: req.GetStationName(), RespWorkLoad: map[string]*protobuff.DayWork{}, Error: err.Error()}
+		result := &protobuff.GetStationWorkloadFromDBResponse{StationWorkloads: []*protobuff.StationData{&protobuff.StationData{RespstationName: req.GetStationName(), RespWorkLoad: map[string]*protobuff.DayWork{}, Error: err.Error()}}}
 		return result, nil
 	}
-	result := &protobuff.GetStationWorkloadFromDBResponse{RespstationName: req.GetStationName(), RespWorkLoad: tmp, Error: msg_err}
+	result := &protobuff.GetStationWorkloadFromDBResponse{StationWorkloads: []*protobuff.StationData{&protobuff.StationData{RespstationName: req.GetStationName(), RespWorkLoad: tmp, Error: msg_err}}}
 
 	return result, nil
-
 }
 func (s *Server) mustEmbedUnimplementedMyServiceServer() error {
 	return nil
